--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       rel="stylesheet"
       href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500&family=Shippori+Antique+B1&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body class="lower-index" id="pagetop">
@@ -987,7 +993,7 @@
                     <img src="./img/home/companie-logo/logo1.jpg" alt="" />
                   </div>
                   <p class="outstanding-companies__text">
-                    遠雄集團<br />
+                    遠雄集團 <br />
                     三峽案專案經理職缺
                   </p>
                 </li>
@@ -996,8 +1002,8 @@
                     <img src="./img/home/companie-logo/logo2.jpg" alt="" />
                   </div>
                   <p class="outstanding-companies__text">
-                    遠雄集團<br />
-                    三峽案專案經理職缺
+                    國泰建設 <br />
+                    高雄工地主任
                   </p>
                 </li>
                 <li class="outstanding-companies__item">
@@ -1005,8 +1011,8 @@
                     <img src="./img/home/companie-logo/logo3.jpg" alt="" />
                   </div>
                   <p class="outstanding-companies__text">
-                    遠雄集團<br />
-                    三峽案專案經理職缺
+                    達欣工程 <br />
+                    徵工程人員數名
                   </p>
                 </li>
                 <li class="outstanding-companies__item">
@@ -1014,8 +1020,8 @@
                     <img src="./img/home/companie-logo/logo4.jpg" alt="" />
                   </div>
                   <p class="outstanding-companies__text">
-                    遠雄集團<br />
-                    三峽案專案經理職缺
+                    忠泰建設<br />
+                    建築專案（主管職）
                   </p>
                 </li>
                 <li class="outstanding-companies__item">
@@ -1023,8 +1029,8 @@
                     <img src="./img/home/companie-logo/logo5.jpg" alt="" />
                   </div>
                   <p class="outstanding-companies__text">
-                    遠雄集團<br />
-                    三峽案專案經理職缺
+                    許黃勝兆建築師事務<br />
+                    所 徵建築設計師
                   </p>
                 </li>
                 <li class="outstanding-companies__item">
@@ -1032,8 +1038,8 @@
                     <img src="./img/home/companie-logo/logo6.jpg" alt="" />
                   </div>
                   <p class="outstanding-companies__text">
-                    遠雄集團<br />
-                    三峽案專案經理職缺
+                    元創建築｜奧林國際<br />
+                    徵資深室內設計師
                   </p>
                 </li>
                 <li class="outstanding-companies__item">
@@ -1041,8 +1047,8 @@
                     <img src="./img/home/companie-logo/logo7.jpg" alt="" />
                   </div>
                   <p class="outstanding-companies__text">
-                    遠雄集團<br />
-                    三峽案專案經理職缺
+                    李祖源聯合建築師<br />
+                    事務所 徵設計助理
                   </p>
                 </li>
                 <li class="outstanding-companies__item">
@@ -1050,8 +1056,8 @@
                     <img src="./img/home/companie-logo/logo8.jpg" alt="" />
                   </div>
                   <p class="outstanding-companies__text">
-                    遠雄集團<br />
-                    三峽案專案經理職缺
+                    匯喬設計<br />
+                    海外部門經理
                   </p>
                 </li>
                 <li class="outstanding-companies__item">
@@ -1059,35 +1065,28 @@
                     <img src="./img/home/companie-logo/logo9.jpg" alt="" />
                   </div>
                   <p class="outstanding-companies__text">
-                    遠雄集團<br />
-                    三峽案專案經理職缺
+                    冠軍磁磚台北旗艦店 銷售人員數名
                   </p>
                 </li>
                 <li class="outstanding-companies__item">
                   <div class="outstanding-companies__logo">
                     <img src="./img/home/companie-logo/logo10.jpg" alt="" />
                   </div>
-                  <p class="outstanding-companies__text">
-                    遠雄集團<br />
-                    三峽案專案經理職缺
-                  </p>
+                  <p class="outstanding-companies__text">徵中部地區安裝師傅</p>
                 </li>
                 <li class="outstanding-companies__item">
                   <div class="outstanding-companies__logo">
                     <img src="./img/home/companie-logo/logo11.jpg" alt="" />
                   </div>
-                  <p class="outstanding-companies__text">
-                    遠雄集團<br />
-                    三峽案專案經理職缺
-                  </p>
+                  <p class="outstanding-companies__text">誠徵合作廠商</p>
                 </li>
                 <li class="outstanding-companies__item">
                   <div class="outstanding-companies__logo">
                     <img src="./img/home/companie-logo/logo12.jpg" alt="" />
                   </div>
                   <p class="outstanding-companies__text">
-                    遠雄集團<br />
-                    三峽案專案經理職缺
+                    柏正廚具高雄旗艦店<br />
+                    專業安裝人員
                   </p>
                 </li>
               </ul>
@@ -1509,86 +1508,103 @@
                 </div>
                 主要技能需求
               </h3>
-              <div class="work-skill__list tgl-content">
-                <!-- For -->
-                <!-- Item -->
-                <div class="work-skill__item">
-                  <div class="work-skill__title">Autocad<br />軟體使用</div>
-                  <div class="work-skill__evaluation">
-                    <ol class="c-evaluation">
-                      <li class="c-evaluation__item">
-                        <p class="c-evaluation__rank">A++</p>
-                      </li>
-                      <li class="c-evaluation__item">
-                        <p class="c-evaluation__rank">A+</p>
-                      </li>
-                      <li class="c-evaluation__item -active">
-                        <p class="c-evaluation__rank">A</p>
-                      </li>
-                      <li class="c-evaluation__item">
-                        <p class="c-evaluation__rank">B+</p>
-                      </li>
-                      <li class="c-evaluation__item">
-                        <p class="c-evaluation__rank">B</p>
-                      </li>
-                      <li class="c-evaluation__item">
-                        <p class="c-evaluation__rank">C</p>
-                      </li>
-                    </ol>
+              <div class="work-skill__wrap tgl-content">
+                <div class="work-skill__list">
+                  <!-- For -->
+                  <!-- Item -->
+                  <div class="work-skill__item">
+                    <div class="work-skill__title">Autocad<br />軟體使用</div>
+                    <div class="work-skill__evaluation">
+                      <ol class="c-evaluation">
+                        <li class="c-evaluation__item">
+                          <p class="c-evaluation__rank">C</p>
+                        </li>
+                        <li class="c-evaluation__item">
+                          <p class="c-evaluation__rank">B</p>
+                        </li>
+                        <li class="c-evaluation__item">
+                          <p class="c-evaluation__rank">B+</p>
+                        </li>
+                        <li class="c-evaluation__item -active">
+                          <p class="c-evaluation__rank">A</p>
+                        </li>
+                        <li class="c-evaluation__item">
+                          <p class="c-evaluation__rank">A+</p>
+                        </li>
+                        <li class="c-evaluation__item">
+                          <p class="c-evaluation__rank">A++</p>
+                        </li>
+                      </ol>
+                    </div>
+                  </div>
+                  <!-- // Item -->
+                  <div class="work-skill__item">
+                    <div class="work-skill__title">施工圖繪製</div>
+                    <div class="work-skill__evaluation">
+                      <ol class="c-evaluation">
+                        <li class="c-evaluation__item">
+                          <p class="c-evaluation__rank">C</p>
+                        </li>
+                        <li class="c-evaluation__item">
+                          <p class="c-evaluation__rank">B</p>
+                        </li>
+                        <li class="c-evaluation__item">
+                          <p class="c-evaluation__rank">B+</p>
+                        </li>
+                        <li class="c-evaluation__item -active">
+                          <p class="c-evaluation__rank">A</p>
+                        </li>
+                        <li class="c-evaluation__item">
+                          <p class="c-evaluation__rank">A+</p>
+                        </li>
+                        <li class="c-evaluation__item">
+                          <p class="c-evaluation__rank">A++</p>
+                        </li>
+                      </ol>
+                    </div>
+                  </div>
+                  <div class="work-skill__item">
+                    <div class="work-skill__title">專案管理<br />經驗</div>
+                    <div class="work-skill__evaluation">
+                      <ol class="c-evaluation">
+                        <li class="c-evaluation__item">
+                          <p class="c-evaluation__rank">C</p>
+                        </li>
+                        <li class="c-evaluation__item">
+                          <p class="c-evaluation__rank">B</p>
+                        </li>
+                        <li class="c-evaluation__item">
+                          <p class="c-evaluation__rank">B+</p>
+                        </li>
+                        <li class="c-evaluation__item -active">
+                          <p class="c-evaluation__rank">A</p>
+                        </li>
+                        <li class="c-evaluation__item">
+                          <p class="c-evaluation__rank">A+</p>
+                        </li>
+                        <li class="c-evaluation__item">
+                          <p class="c-evaluation__rank">A++</p>
+                        </li>
+                      </ol>
+                    </div>
+                  </div>
+                  <!-- End For -->
+                </div>
+                <div class="work-skill__tags c-tags">
+                  <div class="c-tags__item">
+                    <a href="#" class="c-tags__link"
+                      ><span class="-underline">評分標準</span></a
+                    >
+                  </div>
+                  <div class="c-tags__item">
+                    <a href="#" class="c-tags__link -red">
+                      <span class="c-tags__icon">
+                        <img src="./img/home/skill_tags_icon.svg" alt="" />
+                      </span>
+                      <span class="-underline">如何得到Ａ＋＋</span>
+                    </a>
                   </div>
                 </div>
-                <!-- // Item -->
-                <div class="work-skill__item">
-                  <div class="work-skill__title">施工圖繪製</div>
-                  <div class="work-skill__evaluation">
-                    <ol class="c-evaluation">
-                      <li class="c-evaluation__item">
-                        <p class="c-evaluation__rank">A++</p>
-                      </li>
-                      <li class="c-evaluation__item">
-                        <p class="c-evaluation__rank">A+</p>
-                      </li>
-                      <li class="c-evaluation__item -active">
-                        <p class="c-evaluation__rank">A</p>
-                      </li>
-                      <li class="c-evaluation__item">
-                        <p class="c-evaluation__rank">B+</p>
-                      </li>
-                      <li class="c-evaluation__item">
-                        <p class="c-evaluation__rank">B</p>
-                      </li>
-                      <li class="c-evaluation__item">
-                        <p class="c-evaluation__rank">C</p>
-                      </li>
-                    </ol>
-                  </div>
-                </div>
-                <div class="work-skill__item">
-                  <div class="work-skill__title">專案管理<br />經驗</div>
-                  <div class="work-skill__evaluation">
-                    <ol class="c-evaluation">
-                      <li class="c-evaluation__item">
-                        <p class="c-evaluation__rank">A++</p>
-                      </li>
-                      <li class="c-evaluation__item">
-                        <p class="c-evaluation__rank">A+</p>
-                      </li>
-                      <li class="c-evaluation__item">
-                        <p class="c-evaluation__rank">A</p>
-                      </li>
-                      <li class="c-evaluation__item">
-                        <p class="c-evaluation__rank">B+</p>
-                      </li>
-                      <li class="c-evaluation__item -active">
-                        <p class="c-evaluation__rank">B</p>
-                      </li>
-                      <li class="c-evaluation__item">
-                        <p class="c-evaluation__rank">C</p>
-                      </li>
-                    </ol>
-                  </div>
-                </div>
-                <!-- End For -->
               </div>
             </div>
             <!-- // Skill -->
@@ -1714,32 +1730,29 @@
             </div>
           </nav>
           <nav class="footer__menu sp-tgl-wrap">
-            <p class="footer__menu-heading tgl-switch">種類</p>
+            <p class="footer__menu-heading tgl-switch">職業種類</p>
             <div class="tgl-content">
               <ul class="footer__menu-list">
                 <li class="footer__menu-item">
-                  <a href="">建築</a>
+                  <a href="">建築文化資產|教育|出版媒體</a>
                 </li>
                 <li class="footer__menu-item">
-                  <a href="">景觀/規劃/土地開發 </a>
+                  <a href="">工程|材料|設備|廠商|運輸 </a>
+                </li>
+                <li class="footer__menu-item">
+                  <a href="">景觀｜規劃｜土地開發 </a>
+                </li>
+                <li class="footer__menu-item">
+                  <a href="">相關技師｜顧問</a>
                 </li>
                 <li class="footer__menu-item">
                   <a href="">室內設計</a>
                 </li>
                 <li class="footer__menu-item">
-                  <a href="">建築媒體</a>
+                  <a href="">建築</a>
                 </li>
                 <li class="footer__menu-item">
-                  <a href="">建築文化資產</a>
-                </li>
-                <li class="footer__menu-item">
-                  <a href="">建築出版社</a>
-                </li>
-                <li class="footer__menu-item">
-                  <a href="">建築出版社</a>
-                </li>
-                <li class="footer__menu-item">
-                  <a href="">建築出版社</a>
+                  <a href="">其他</a>
                 </li>
               </ul>
             </div>
@@ -1785,6 +1798,22 @@
               <ul class="footer__menu-list">
                 <li class="footer__menu-item">
                   <a href="">info@aplusplus.com.tw</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+          <nav class="footer__menu sp-tgl-wrap">
+            <p class="footer__menu-heading tgl-switch">合作夥伴</p>
+            <div class="tgl-content">
+              <ul class="footer__menu-list">
+                <li class="footer__menu-item">
+                  <div class="footer__menu-logo">
+                    <a href=""
+                      ><img
+                        src="./img/partner_logo.svg"
+                        alt="PARTNER SYSTEM.CO"
+                    /></a>
+                  </div>
                 </li>
               </ul>
             </div>
