--- a/reg/step4.html
+++ b/reg/step4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A++_usercomplete</title>
+    <title>A++_step4</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
@@ -18,14 +18,14 @@
           <div class="header__inner">
             <h1 class="h-logo">
               <a href="/">
-                <img src="./img/logo.svg" alt="A++" />
+                <img src="../img/logo.svg" alt="A++" />
               </a>
             </h1>
             <div class="c-spacer"></div>
         </div>
     </header>
     <div class="m2-logo"> 
-      <img src="./img/logoflipcolor.svg" alt="">
+      <img src="../img/logoflipcolor.svg" alt="">
     </div>
     <div class="login-complete">
       <p>恭喜你!</p>
@@ -59,7 +59,7 @@
 
         <!-- Scripts -->
     <!-- ↓Home only -->
-    <script src="./js/script.js"></script>
+    <script src="../js/script.js"></script>
     <!-- ↑Home only -->
   </body>
 </html>
