--- a/reg/step1.html
+++ b/reg/step1.html
@@ -95,7 +95,7 @@
           </table>
           <div class="agreement">
             <label>
-              <input class="check-test" type="checkbox" name="check_name">
+              <input class="agree-checkbox" type="checkbox" name="check_name">
               <span>
                 本人已閱讀並同意Ａ＋＋的
                 <a href="">網站使用規約及服務條款</a>與<a href="">隱私權政策</a>
