--- a/reg/step3.html
+++ b/reg/step3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A++_step3</title>
+    <title>A++ step3</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
@@ -24,7 +24,7 @@
             <div class="c-spacer"></div>
         </div>
     </header>
-    <div class="user-specialities-body">
+    <div class="user-skill-body">
       <div class="steps-top-right">
         <div class="steps-contents">
           <ul>
@@ -35,21 +35,21 @@
           </ul>
         </div>
       </div>
-      <div class="user-specialities-title">
+      <div class="user-skill-title">
         填寫自我評量
       </div>
 
-      <div class="user-specialities-whitebox">
-        <form class="user-specialities-contents" action="action.php" method="post" enctype="multipart/form-data">
+      <div class="user-skill-whitebox">
+        <form class="user-skill-contents" action="action.php" method="post" enctype="multipart/form-data">
           <div class="job-categories1">
             <div class="job-categories1-title">職業類別1</div>
             <div class="job-categories1-checkbox">
-              <label><input class="job-checkbox" type="checkbox" name="architecture" id=""><span>建築</span></label>
-              <label><input class="job-checkbox" type="checkbox" name="interior" id=""><span>室内設計</span></label>
-              <label><input class="job-checkbox" type="checkbox" name="technician" id=""><span>相關技師｜顧問</span></label>
-              <label><input class="job-checkbox" type="checkbox" name="land_develop" id=""><span>景觀｜規劃｜土地開發</span></label><br>
-              <label><input class="job-checkbox" type="checkbox" name="process" id=""><span>工程｜材料｜設備｜廠商｜運輸</span></label>
-              <label><input class="job-checkbox" type="checkbox" name="asset" id=""><span>建築文化資產｜教育｜出版媒體</span></label>
+              <label><input class="job-checkbox" type="radio" name="skill[0]" id=""><span>建築</span></label>
+              <label><input class="job-checkbox" type="radio" name="skill[0]" id=""><span>室内設計</span></label>
+              <label><input class="job-checkbox" type="radio" name="skill[0]" id=""><span>相關技師｜顧問</span></label>
+              <label><input class="job-checkbox" type="radio" name="skill[0]" id=""><span>景觀｜規劃｜土地開發</span></label><br>
+              <label><input class="job-checkbox" type="radio" name="skill[0]" id=""><span>工程｜材料｜設備｜廠商｜運輸</span></label>
+              <label><input class="job-checkbox" type="radio" name="skill[0]" id=""><span>建築文化資產｜教育｜出版媒體</span></label>
             </div>
             <div class="work-skill sp-tgl-wrap">
               <h3 class="works__section-title tgl-switch">
@@ -179,144 +179,7 @@
               </div>
             </div>
           </div>
-          <div class="job-categories1">
-            <div class="job-categories1-title">職業類別2</div>
-            <div class="job-categories1-checkbox">
-              <label><input class="job-checkbox" type="checkbox" name="architecture[1]" id=""><span>建築</span></label>
-              <label><input class="job-checkbox" type="checkbox" name="interior[1]" id=""><span>室内設計</span></label>
-              <label><input class="job-checkbox" type="checkbox" name="technician[1]" id=""><span>相關技師｜顧問</span></label>
-              <label><input class="job-checkbox" type="checkbox" name="land_develop[1]" id=""><span>景觀｜規劃｜土地開發</span></label><br>
-              <label><input class="job-checkbox" type="checkbox" name="process[1]" id=""><span>工程｜材料｜設備｜廠商｜運輸</span></label>
-              <label><input class="job-checkbox" type="checkbox" name="asset[1]" id=""><span>建築文化資產｜教育｜出版媒體</span></label>
-            </div>
-            <div class="work-skill sp-tgl-wrap">
-              <h3 class="works__section-title tgl-switch">
-                <div class="works__section-icon">
-                  <img src="../img/home/work_section_title_icon1.svg" alt="" />
-                </div>
-                主要技能需求
-              </h3>
-              <div class="work-skill__wrap tgl-content">
-                <div class="work-skill__list">
-                  <!-- For -->
-                  <!-- Item -->
-                  <div class="work-skill__item">
-                    <div class="work-skill__title">Autocad<br />軟體使用</div>
-                    <div class="work-skill__evaluation">
-                      <ol class="c-evaluation">
-                        <li class="c-evaluation__item">
-                          <input type="radio" name="autocad_skill[1]" id="evaluation-c4" required>
-                          <label for="evaluation-c4" class="c-evaluation__rank">C</label>
-                        </li>
-                        <li class="c-evaluation__item">
-                          <input type="radio" name="autocad_skill[1]" id="evaluation-b4" >
-                          <label for="evaluation-b4" class="c-evaluation__rank">B</label>
-                        </li>
-                        <li class="c-evaluation__item">
-                          <input type="radio" name="autocad_skill[1]" id="evaluation-bb4">
-                          <label for="evaluation-bb4" class="c-evaluation__rank">B+</label>
-                        </li>
-                        <li class="c-evaluation__item">
-                          <input type="radio" name="autocad_skill[1]" id="evaluation-a4">
-                          <label for="evaluation-a4" class="c-evaluation__rank">A</label>
 
-                        </li>
-                        <li class="c-evaluation__item">
-                          <input type="radio" name="autocad_skill[1]" id="evaluation-aa4">
-                          <label for="evaluation-aa4" class="c-evaluation__rank">A+</label>
-                        </li>
-                        <li class="c-evaluation__item">
-                          <input type="radio" name="autocad_skill[1]" id="evaluation-aaa4">
-                          <label for="evaluation-aaa4" class="c-evaluation__rank">A++</label>
-                        </li>
-                      </ol>
-                    </div>
-                  </div>
-                  <!-- // Item -->
-                  <div class="work-skill__item">
-                    <div class="work-skill__title">施工圖繪製</div>
-                    <div class="work-skill__evaluation">
-                      <ol class="c-evaluation">
-                        <li class="c-evaluation__item">
-                          <input type="radio" name="drawing_skill[1]" id="evaluation-c5" required>
-                          <label for="evaluation-c5" class="c-evaluation__rank">C</label>
-                        </li>
-                        <li class="c-evaluation__item">
-                          <input type="radio" name="drawing_skill[1]" id="evaluation-b5">
-                          <label for="evaluation-b5" class="c-evaluation__rank">B</label>
-                        </li>
-                        <li class="c-evaluation__item">
-                          <input type="radio" name="drawing_skill[1]" id="evaluation-bb5">
-                          <label for="evaluation-bb5" class="c-evaluation__rank">B+</label>
-                        </li>
-                        <li class="c-evaluation__item">
-                          <input type="radio" name="drawing_skill[1]" id="evaluation-a5">
-                          <label for="evaluation-a5" class="c-evaluation__rank">A</label>
-
-                        </li>
-                        <li class="c-evaluation__item">
-                          <input type="radio" name="drawing_skill[1]" id="evaluation-aa5">
-                          <label for="evaluation-aa5" class="c-evaluation__rank">A+</label>
-                        </li>
-                        <li class="c-evaluation__item">
-                          <input type="radio" name="drawing_skill[1]" id="evaluation-aaa5">
-                          <label for="evaluation-aaa5" class="c-evaluation__rank">A++</label>
-                        </li>
-                      </ol>
-                    </div>
-                  </div>
-                  <div class="work-skill__item">
-                    <div class="work-skill__title">專案管理<br />經驗</div>
-                    <div class="work-skill__evaluation">
-                      <ol class="c-evaluation">
-                        <li class="c-evaluation__item">
-                          <input type="radio" name="manage_skill[1]" id="evaluation-c6" required>
-                          <label for="evaluation-c6" class="c-evaluation__rank">C</label>
-                        </li>
-                        <li class="c-evaluation__item">
-                          <input type="radio" name="manage_skill[1]" id="evaluation-b6">
-                          <label for="evaluation-b6" class="c-evaluation__rank">B</label>
-                        </li>
-                        <li class="c-evaluation__item">
-                          <input type="radio" name="manage_skill[1]" id="evaluation-bb6">
-                          <label for="evaluation-bb6" class="c-evaluation__rank">B+</label>
-                        </li>
-                        <li class="c-evaluation__item">
-                          <input type="radio" name="manage_skill[1]" id="evaluation-a6">
-                          <label for="evaluation-a6" class="c-evaluation__rank">A</label>
-
-                        </li>
-                        <li class="c-evaluation__item">
-                          <input type="radio" name="manage_skill[1]" id="evaluation-aa6">
-                          <label for="evaluation-aa6" class="c-evaluation__rank">A+</label>
-                        </li>
-                        <li class="c-evaluation__item">
-                          <input type="radio" name="manage_skill[1]" id="evaluation-aaa6">
-                          <label for="evaluation-aaa6" class="c-evaluation__rank">A++</label>
-                        </li>
-                      </ol>
-                    </div>
-                  </div>
-                  <!-- End For -->
-                </div>
-                <div class="work-skill__tags c-tags">
-                  <div class="c-tags__item">
-                    <a href="#rank-base" class="c-tags__link">
-                      <span class="-underline">評分標準</span>
-                    </a>
-                  </div>
-                  <div class="c-tags__item">
-                    <a href="#" class="c-tags__link -red">
-                      <span class="c-tags__icon">
-                        <img src="../img/home/skill_tags_icon.svg" alt="" />
-                      </span>
-                      <span class="-underline">如何得到Ａ＋＋</span>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
           <div class="rank-base" id="rank-base">
             <div class="rank-base-title">
               <img src="../img/icon/売り上げ分析アイコン.png" alt="">評分標準
@@ -365,8 +228,8 @@
             </table>
           </div>
           <div class="info-submit">
-            <button type="button" class="backtoprevious"><a href="./step2.html">上一頁</a></button>
             <button type="submit" name=""><a href="./step4.html">送出</a></button>
+            <button type="button" class="backtoprevious"><a href="./step2.html" class="backtoprevious">上一頁</a></button>
           </div>
         </form>
       </div>
